--- a/cpp_2.vcxproj
+++ b/cpp_2.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="cpp_day2.cpp" />
     <ClCompile Include="cpp_day1.cpp" />
     <ClCompile Include="cpp_day2_2.cpp" />
+    <ClCompile Include="cpp_day3.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
