--- a/cpp_2.vcxproj
+++ b/cpp_2.vcxproj
@@ -132,6 +132,8 @@
     <ClCompile Include="cpp_day1.cpp" />
     <ClCompile Include="cpp_day2_2.cpp" />
     <ClCompile Include="cpp_day3.cpp" />
+    <ClCompile Include="cpp_day4.cpp" />
+    <ClCompile Include="cpp_day5.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
