--- a/cpp_2.vcxproj.filters
+++ b/cpp_2.vcxproj.filters
@@ -27,5 +27,11 @@
     <ClCompile Include="cpp_day3.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="cpp_day4.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="cpp_day5.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
