--- a/cpp_2.vcxproj
+++ b/cpp_2.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="cpp_day4.cpp" />
     <ClCompile Include="cpp_day5.cpp" />
     <ClCompile Include="cpp_day5_2.cpp" />
+    <ClCompile Include="cpp_day6.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
