day7 구조체와 클래스(메서드구현, 상속) 비교, getter와 setter (가독성과 보안성), class 상속,  생성자에서 초기화 리스트(가독성과 할당우선순위), namespace 사용

--- a/cpp_2.vcxproj
+++ b/cpp_2.vcxproj
@@ -136,6 +136,9 @@
     <ClCompile Include="cpp_day5.cpp" />
     <ClCompile Include="cpp_day5_2.cpp" />
     <ClCompile Include="cpp_day6.cpp" />
+    <ClCompile Include="cpp_day7_2.cpp" />
+    <ClCompile Include="cpp_day7_3.cpp" />
+    <ClCompile Include="cpp_day7.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
