day8 포인터, 2차원 동적배열,,

--- a/cpp_2.vcxproj
+++ b/cpp_2.vcxproj
@@ -139,6 +139,8 @@
     <ClCompile Include="cpp_day7_2.cpp" />
     <ClCompile Include="cpp_day7_3.cpp" />
     <ClCompile Include="cpp_day7.cpp" />
+    <ClCompile Include="cpp_day8.cpp" />
+    <ClCompile Include="cpp_day8_2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
