--- a/cpp_2.vcxproj.filters
+++ b/cpp_2.vcxproj.filters
@@ -48,5 +48,11 @@
     <ClCompile Include="cpp_day7_3.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="cpp_day8.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="cpp_day8_2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
