--- a/cpp_2.vcxproj.filters
+++ b/cpp_2.vcxproj.filters
@@ -54,5 +54,11 @@
     <ClCompile Include="cpp_day8_2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="cpp_day9.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="cpp_day9_2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
