--- a/cpp_2.vcxproj
+++ b/cpp_2.vcxproj
@@ -128,6 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="cpp_day10.cpp" />
     <ClCompile Include="cpp_day2.cpp" />
     <ClCompile Include="cpp_day1.cpp" />
     <ClCompile Include="cpp_day2_2.cpp" />
