--- a/cpp_2.vcxproj.filters
+++ b/cpp_2.vcxproj.filters
@@ -60,5 +60,8 @@
     <ClCompile Include="cpp_day9_2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="cpp_day10.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
